# lanim

./: .gitignore  404.html  LICENSE  README.md  anim.py  bob.py  compile.sh  easings.py  example.py  index.html  latex.py  main.py  objects.inv  pil_graphics.py  pil_machinery.py  pil_types.py  pil_utils.py  pyproject.toml  requirements.txt  sitemap.xml
dev/docs/: index.html
howtos/: index.html
lanim/: __main__.py  anim.py  core.py  easings.py  latex.py  pil.py  pil_graphics.py  pil_machinery.py  pil_types.py  pil_utils.py  standalone.py  threaded_cache.py
lanim/examples/: docs.py  hadoukenify.py  hello.py  showcase.py
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md  tutorial.md
mkdocs/docs/dev/: docs.md
mkdocs/docs/reference/: command-line.md  core.md  pil.md
mkdocs/docs/tutorial/: hello.md  how-does-lanim-work.md  installation.md
mkdocs/docs/tutorial/coordinates/: index.md
mkdocs/docs/tutorial/hello/: index.md
mkdocs/docs/tutorial/how-does-lanim-work/: index.md
reference/command-line/: index.html
reference/core/: index.html
reference/pil/: index.html
search/: search_index.json
tutorial/: index.html
tutorial/coordinates/: index.html
tutorial/design/: index.html
tutorial/hello/: index.html
tutorial/how-does-lanim-work/: index.html
tutorial/installation/: index.html
