[tool.poetry]
name = "lanim"
version = "0.3.1"
description = "Functional animation library"
authors = ["decorator-factory <42166884+decorator-factory@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/decorator-factory/lanim"
readme = "README.md"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Multimedia",
]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.6"
pymdown-extensions = "^8.2"
mkdocstrings = { git = "https://github.com/mkdocstrings/mkdocstrings.git", rev = "5c961e7c95650c2a6a95e060fc41a3bd346f1cff" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
